// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultItem /> component should render a result item component in a selected state 1`] = `
<li
  data-css-fsydme=""
  onDoubleClick={[Function]}
>
  <div
    data-css-1ch5118=""
  >
    <span
      data-css-1ezhq81=""
      role="presentation"
    >
      
    </span>
  </div>
  <div
    data-css-15y2pmq=""
  >
    <h2
      data-css-13rh4x1=""
    >
      File Title
    </h2>
    <h3
      data-css-1rd6wq3=""
    >
      File Subtitle
    </h3>
  </div>
</li>
`;

exports[`<ResultItem /> component should render a result item component with a file icon 1`] = `
<li
  data-css-1gdhlsu=""
  onDoubleClick={[Function]}
>
  <div
    data-css-1ch5118=""
  >
    <span
      data-css-1ezhq81=""
      role="presentation"
    >
      
    </span>
  </div>
  <div
    data-css-15y2pmq=""
  >
    <h2
      data-css-13rh4x1=""
    >
      File Title
    </h2>
    <h3
      data-css-1rd6wq3=""
    >
      File Subtitle
    </h3>
  </div>
</li>
`;

exports[`<ResultItem /> component should render a result item component with a text icon 1`] = `
<li
  data-css-1gdhlsu=""
  onDoubleClick={[Function]}
>
  <div
    data-css-1ch5118=""
  >
    <span
      data-css-1ezhq81=""
      role="presentation"
    >
      
    </span>
  </div>
  <div
    data-css-15y2pmq=""
  >
    <h2
      data-css-13rh4x1=""
    >
      Text Item
    </h2>
    <h3
      data-css-1rd6wq3=""
    >
      Text Subtitle
    </h3>
  </div>
</li>
`;
